tests/miniJava/neg/000039_mutation.MiniJava
class java if public static void Main ( String [ ] java ) { { } } }
